--- a/My_First_Portfolio/html_basic/index.html
+++ b/My_First_Portfolio/html_basic/index.html
@@ -6,28 +6,51 @@
   </head>
   <body>
     <header>
-      <h1>My First Portfolio</h1>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
     </header>
 
-    <section>
-      <h2>About This Page</h2>
-      <p>This is a simple portfolio page showcasing my projects.</p>
-      <p>I am practising the basics</p>
-    </section>
+    <main>
+      <article>
+        <h1>Welcome to My Portfolio</h1>
+        <h2>About Me</h2>
+        <p>
+          This is the homepage of my first website. I'm practicing HTML
+          structure and semantics.
+        </p>
+        <p>
+          I am focusing on building consistent pages with header, main and
+          footer.
+        </p>
+        <h3>Why this matters</h3>
+        <p>Good structure helps accessibility and maintainability of sites.</p>
+        <p>Small steps = consistent results.</p>
 
-    <section>
-      <h3>What i learned</h3>
-      <p>Writing small, valid HTML files build a strong foundation for web development</p>
-      <p>Understanding the structure and semantics of HTML is crucial for creating accessible and well-organized web pages</p>
-    </section>
+        <a
+          href="https://www.alxafrica.com"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img
+            src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
+            alt="ALX Logo"
+            style="max-width: 300px; display: block"
+          />
+        </a>
+      </article>
 
-    <section
-      <h3>Clickable Image</h3>
-      <a href=" https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200" />
-      </a>
-      <p>Click the image to visit the ALX website.</p>
-    </section>
-    </body>
-    </html>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
 
+    <footer>
+      <p>
+        Made by Ndanyuzwe Hygue -
+        <a href="https://github.com/account" target="_blank">here</a>
+      </p>
+    </footer>
+  </body>
+</html>
