Add tweets.html with embedded tweet and navigation

--- a/My_First_Portfolio/html_basic/tweets.html
+++ b/My_First_Portfolio/html_basic/tweets.html
@@ -5,32 +5,51 @@
     <title>Base Index</title>
   </head>
   <body>
-    <h1>My Tweets</h1>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </header>
 
-    <blockquote class="twitter-tweet">
-      <p lang="en" dir="ltr">
-        Just a friendly reminder: When you don&#39;t get a miracle, you could
-        always be a miracle for someone else.
-        <a
-          href="https://twitter.com/hashtag/miracle?src=hash&amp;ref_src=twsrc%5Etfw"
-          >#miracle</a
-        >
-        <a
-          href="https://twitter.com/hashtag/ENCOURAGEMENT?src=hash&amp;ref_src=twsrc%5Etfw"
-          >#ENCOURAGEMENT</a
-        >
+    <main>
+      <article>
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">
+            Just a friendly reminder: When you don&#39;t get a miracle, you
+            could always be a miracle for someone else.
+            <a
+              href="https://twitter.com/hashtag/miracle?src=hash&amp;ref_src=twsrc%5Etfw"
+              >#miracle</a
+            >
+            <a
+              href="https://twitter.com/hashtag/ENCOURAGEMENT?src=hash&amp;ref_src=twsrc%5Etfw"
+              >#ENCOURAGEMENT</a
+            >
+          </p>
+          &mdash; Nick Vujicic (@nickvujicic)
+          <a
+            href="https://twitter.com/nickvujicic/status/1379493008547123210?ref_src=twsrc%5Etfw"
+            >April 6, 2021</a
+          >
+        </blockquote>
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
+      </article>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+    <footer>
+      <p>
+        Ndanyuzwe Hygue-
+        <a href="https://github.com/account" target="_blank">here</a>
       </p>
-      &mdash; Nick Vujicic (@nickvujicic)
-      <a
-        href="https://twitter.com/nickvujicic/status/1379493008547123210?ref_src=twsrc%5Etfw"
-        >April 6, 2021</a
-      >
-    </blockquote>
-    <script
-      async
-      src="https://platform.twitter.com/widgets.js"
-      charset="utf-8"
-    ></script>
+    </footer>
+
     <p><a href="index.html">Go back to Homepage</a></p>
   </body>
 </html>
