--- a/My_First_Portfolio/html_basic/index.html
+++ b/My_First_Portfolio/html_basic/index.html
@@ -4,85 +4,5 @@
     <meta charset="utf-8" />
     <title>Base Index</title>
   </head>
-  <body>
-    <header>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tweets.html">Tweets</a></li>
-      </ul>
-    </header>
-
-    <main>
-      <article>
-        <table>
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Age</th>
-              <th>Country</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>John</td>
-              <td>25</td>
-              <td>USA</td>
-            </tr>
-            <tr>
-              <td>Emily</td>
-              <td>28</td>
-              <td>Canada</td>
-            </tr>
-            <tr>
-              <td>Michael</td>
-              <td>32</td>
-              <td>Australia</td>
-            </tr>
-            <tr>
-              <td>Sophia</td>
-              <td>21</td>
-              <td>UK</td>
-            </tr>
-          </tbody>
-        </table>
-
-        <h1>Welcome to My Portfolio</h1>
-        <h2>About Me</h2>
-        <p>
-          This is the homepage of my first website. I'm practicing HTML
-          structure and semantics.
-        </p>
-        <p>
-          I am focusing on building consistent pages with header, main and
-          footer.
-        </p>
-        <h3>Why this matters</h3>
-        <p>Good structure helps accessibility and maintainability of sites.</p>
-        <p>Small steps = consistent results.</p>
-
-        <a
-          href="https://www.alxafrica.com"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img
-            src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"
-            alt="ALX Logo"
-            style="max-width: 300px; display: block"
-          />
-        </a>
-      </article>
-
-      <aside>
-        <p>placeholder to add comment thread later</p>
-      </aside>
-    </main>
-
-    <footer>
-      <p>
-        Made by Ndanyuzwe Hygue -
-        <a href="https://github.com/account" target="_blank">here</a>
-      </p>
-    </footer>
-  </body>
+  <body></body>
 </html>
