--- a/OneDrive/Desktop/alx_html_css/css_basic/index.html
+++ b/OneDrive/Desktop/alx_html_css/css_basic/index.html
@@ -11,6 +11,8 @@
   <body class="works_on_smartphone">
     <header>
       <ul>
+        <li class="logo">&spades;</li>
+        <!-- Example logo using a Unicode character -->
         <li><a href="index.html">Home</a></li>
         <li><a href="tweets.html">Tweets</a></li>
       </ul>
