Add css_basic project with index, tweets, base.css, styles.css

--- a/OneDrive/Desktop/alx_html_css/css_basic/index.html
+++ b/OneDrive/Desktop/alx_html_css/css_basic/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <title>My Portfolio - Home</title>
     <link href="base.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
+
+    <meta charset="UTF-8" />
+    <title>My Portfolio - Home</title>
   </head>
-  <body class="works_on_smartphone">
+  <body>
     <header>
       <ul>
-        <li class="logo">&spades;</li>
-        <!-- Example logo using a Unicode character -->
         <li><a href="index.html">Home</a></li>
         <li><a href="tweets.html">Tweets</a></li>
       </ul>
