--- a/alx_html_css/css_basic/index.html
+++ b/alx_html_css/css_basic/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="base.css" rel="stylesheet" />
-    <link href="styles.css" rel="stylesheet" />
     <meta charset="UTF-8" />
-    <title>My Portfolio - Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Website</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
@@ -64,7 +64,7 @@
             </tr>
           </tbody>
         </table>
-        <!-- ✅ End of new table -->
+        <!-- End of updated table -->
       </article>
 
       <aside>
