feat: Add custom styling and logo
- Add Unicode star character as logo in header
- Implement gradient backgrounds and custom colors
- Add feature boxes with unique styling
- Create tweet cards with hover effects
- Customize sidebar with gradient background
- Add image hover effects and rounded corners
- Maintain existing flexbox layout structure

--- a/alx_html_css/css_basic/index.html
+++ b/alx_html_css/css_basic/index.html
@@ -9,6 +9,8 @@
   <body>
     <header>
       <ul>
+        <li class="logo">&spades;</li>
+        <!-- Example logo using a Unicode character -->
         <li><a href="index.html">Home</a></li>
         <li><a href="tweets.html">Tweets</a></li>
       </ul>
