--- a/headphones/4-index.html
+++ b/headphones/4-index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Headphones - Our Results</title>
     <link rel="stylesheet" href="holberton_school-icon.css" />
-    <link rel="stylesheet" href="2-styles.css" />
+    <link rel="stylesheet" href="4-style.css" />
   </head>
   <body>
     <!-- HEADER -->
